--- a/src/Tests/Tests.fsproj
+++ b/src/Tests/Tests.fsproj
@@ -32,6 +32,7 @@
     <Compile Include="SignalR.fs" />
     <Compile Include="EventGrid.fs" />
     <Compile Include="WebApp.fs" />
+    <Compile Include="VirtualNetwork.fs" />
     <Compile Include="VirtualNetworkGateway.fs" />
     <Compile Include="AllTests.fs" />
   </ItemGroup>
